# heartbeat-watcher

./: .gitignore  CONFIG.md  LICENSE  MIGRATION.md  README.md  example-hbwatcher_config.json  example-nhbwatcher_config.json  hbwatcher.py  hbwatcher_config.json  install.sh  makedist.sh  pyproject.toml  uninstall.sh
.github/workflows/: release.yml
src/hb_watcher/: __init__.py  watcher.py
