[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hb-watcher"
version = "1.1.0"
description = "Heartbeat monitoring daemon for the Nuclei ecosystem"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "J. Will Pierce", email = "willp@users.noreply.github.com"},
]
keywords = ["heartbeat", "monitoring", "nuclei", "watcher", "daemon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage      = "https://github.com/willp/heartbeat-watcher"
Repository    = "https://github.com/willp/heartbeat-watcher"
Documentation = "https://github.com/willp/heartbeat-watcher/blob/main/README.md"
Issues        = "https://github.com/willp/heartbeat-watcher/issues"

[project.scripts]
hbwatcher = "hb_watcher.watcher:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hb_watcher*"]
